update connection from main to mainDBsearch

--- a/main.html
+++ b/main.html
@@ -6,6 +6,6 @@
     </head>
     <body>
         <h1>Welcome to OMR!</h1>
-        <a href="omr.php"><button>Search Database</button></a>
+        <a href="mainDBsearch.php"><button>Search Database</button></a>
     </body>
 </html>
